# asahio

./: .gitignore  DAYS_4_5_SUMMARY.md  DOCUMENTATION_INTEGRATION.md  MODEL_C_COMPLETE.md  P0_PROGRESS_SUMMARY.md  P1_PROGRESS_SUMMARY.md  PINECONE_ARCHITECTURE_GAPS.md  railway.toml
.github/workflows/: publish-pypi.yml
backend/: requirements.txt
backend/app/: config.py  main.py
backend/tests/: conftest.py  test_aba_anomaly_detector.py  test_aba_feedback_hook.py  test_aba_integration.py  test_aba_writer.py  test_agents.py  test_analytics_leaderboard.py  test_billing.py  test_brute_force.py  test_cache_warm.py  test_circuit_breaker.py  test_context_cache.py  test_dependency_fingerprint.py  test_fingerprint_builder.py  test_gateway.py  test_gateway_intervention.py  test_hallucination_detector.py  test_health.py  test_intervention_engine.py  test_intervention_writer.py  test_keys.py  test_mode_engine.py  test_model_c_pool.py  test_provider_models.py  test_providers_api.py  test_request_id.py  test_risk_scorer.py  test_routing_engine.py  test_rule_dry_run.py  test_rule_validator.py  test_security_headers.py  test_session_graph.py  test_structural_extractor.py  test_vercel_gateway.py
config/: models.yaml
data/logs/: events_2026-03-20.jsonl
docs/: ASAHIO_Engineering_Changelog_March2026.md
frontend/: middleware.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: code-snippet.tsx  command-menu.tsx  empty-state.tsx  markdown-renderer.tsx  onboarding-wizard.tsx
frontend/lib/: api.ts  docs-config.ts
frontend/types/: canvas-confetti.d.ts
sdk/: CHANGELOG.md  README.md  pyproject.toml
sdk/src/acorn/: __init__.py
sdk/src/asahi/: __init__.py
sdk/src/asahio/: _base_client.py  _streaming.py  client.py  tools.py
sdk/src/asahio/resources/: __init__.py  aba.py  agents.py  analytics.py  billing.py  chains.py  health.py  interventions.py  models.py  ollama.py  provider_keys.py  routing.py  traces.py
sdk/src/asahio/types/: __init__.py  aba.py  agents.py  analytics.py  billing.py  chat.py  health.py  interventions.py  providers.py  routing.py  traces.py
sdk/tests/: test_agents.py  test_caching.py  test_client.py  test_streaming.py  test_tools.py
src/api/: app.py
src/core/: optimizer.py
src/models/: registry.py
(+117 files in other folders)
