[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asahio-ai"
version = "0.1.0"
description = "Enterprise LLM agent control plane SDK for routing, caching, and observability"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["llm", "ai", "agents", "routing", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "httpx>=0.25.0,<1",
    "pydantic>=2.0.0,<3",
    "anyio>=3.5.0,<5",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx", "ruff", "mypy"]

[project.urls]
Homepage = "https://asahio.dev"
Documentation = "https://docs.asahio.dev"
Repository = "https://github.com/asahio-ai/asahio-python"

[tool.hatch.build.targets.wheel]
packages = ["src/asahio", "src/asahi", "src/acorn"]
