[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asahio"
version = "0.1.0"
description = "Enterprise LLM agent control plane SDK for routing, caching, and observability"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "ASAHIO", email = "eng@asahio.dev" }]
keywords = ["llm", "ai", "agents", "routing", "observability", "caching", "hallucination"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0,<1",
    "pydantic>=2.0.0,<3",
    "anyio>=3.5.0,<5",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx", "ruff", "mypy"]

[project.urls]
Homepage = "https://asahio.dev"
Documentation = "https://docs.asahio.dev"
Repository = "https://github.com/asahio-ai/asahio-python"

[tool.hatch.build.targets.wheel]
packages = ["src/asahio", "src/asahi", "src/acorn"]
